devops/enterpriseapp/templates/enterpriseapp-elasticsearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enterpriseapp-elasticsearch
  namespace: enterprise
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enterpriseapp-elasticsearch
  template:
    metadata:
      labels:
        app: enterpriseapp-elasticsearch
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      volumes:
      - name: data
        emptyDir: {}
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:6.4.3
        ports:
        - containerPort: 9200
          name: http
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /usr/share/elasticsearch/data/
---
apiVersion: v1
kind: Service
metadata:
  name: enterpriseapp-elasticsearch
  namespace: enterprise
spec:
  selector:
    app: enterpriseapp-elasticsearch
  ports:
  - port: 9200
    name: http
    protocol: TCP
  - port: 9300
    name: transport
    protocol: TCP
