devops/enterpriseapp/templates/enterpriseapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enterpriseapp
  namespace: enterprise
  labels:
    app: enterpriseapp
spec:
  selector:
    app: enterpriseapp
  ports:
  - name: http
    port: 9999
