devops/enterpriseapp/templates/enterpriseapp-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: enterpriseapp-virtualservice
  namespace: enterprise
spec:
  hosts:
  - enterpriseapp
  http:
  - route:
    - destination:
        host: enterpriseapp
        subset: "v1"
      weight: 100
    retries:
      attempts: 3
      perTryTimeout: 2s
